# CellQuantGUI

./: =0.16.0  CHANGELOG.md  Cellquant_v1.py  Cellquant_v2.py  LICENSE  README.md  analysis_pipeline.py  cellquant_main.py  documentation-CellQuantGUI.md  documentation.md  fix_installation.py  gradio_cellquant_app.py  jc-1.py  launch_cellquant.py  quality_control.py  requirements.txt  template_manager.py
cellquant-v3/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
cellquant-v3/frontend/: package.json  svelte.config.js  vite.config.ts
cellquant-v3/frontend/src/: app.css  app.html
cellquant-v3/frontend/src/lib/api/: bharat-client.ts  bharat-types.ts  client.ts  types.ts  websocket.ts
cellquant-v3/frontend/src/lib/stores/: bharat.ts  experiment.ts  progress.ts  quantification.ts  segmentation.ts  session.ts  tracking.ts  ui.ts
cellquant-v3/frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
cellquant-v3/frontend/src/routes/bharat/: +page.svelte
cellquant-v3/frontend/src/routes/editor/: +page.svelte
cellquant-v3/frontend/src/routes/experiment/: +page.svelte
cellquant-v3/frontend/src/routes/heatmap/: +page.svelte
cellquant-v3/frontend/src/routes/logs/: +page.svelte
cellquant-v3/frontend/src/routes/quantification/: +page.svelte
cellquant-v3/frontend/src/routes/results/: +page.svelte
cellquant-v3/frontend/src/routes/segmentation/: +page.svelte
cellquant-v3/frontend/src/routes/tracking/: +page.svelte
cellquant-v3/frontend/src/routes/training/: +page.svelte
cellquant-v3/src/cellquant/: __init__.py  __main__.py  cli.py
cellquant-v3/src/cellquant/api/: __init__.py  app.py  dependencies.py  middleware.py
cellquant-v3/src/cellquant/api/routers/: bharat.py  experiments.py  export.py  images.py  masks.py  napari.py  quantification.py  segmentation.py  tracking.py  training.py  ws.py
cellquant-v3/src/cellquant/api/schemas/: bharat.py  experiments.py  masks.py  progress.py  quantification.py  segmentation.py  tracking.py  training.py
cellquant-v3/src/cellquant/bharat/: __init__.py  aging_clock.py  cohort_manager.py  demo_data.py
cellquant-v3/src/cellquant/core/: __init__.py  napari_bridge.py  pipeline.py
cellquant-v3/src/cellquant/core/io/: __init__.py  channel_detect.py  image_loader.py  mask_io.py  roi_export.py
cellquant-v3/src/cellquant/core/preprocessing/: __init__.py  calibration.py  correction.py
cellquant-v3/src/cellquant/core/quantification/: __init__.py  background.py  ctcf.py  outliers.py  qc_filters.py
cellquant-v3/src/cellquant/core/segmentation/: __init__.py  cellpose_engine.py  edit_history.py  finetune.py  training_data.py
cellquant-v3/src/cellquant/plugins/: __init__.py  base.py  registry.py
cellquant-v3/src/cellquant/plugins/oxytrack/: __init__.py  models.py  plugin.py  router.py  (+2 more)
cellquant-v3/src/cellquant/sessions/: __init__.py  manager.py  models.py  storage.py
cellquant-v3/src/cellquant/tasks/: __init__.py  queue.py  worker.py
cellquant-v3/src/cellquant/tiles/: __init__.py  cache.py  converter.py  thumbnail.py
cellquant-v3/src/cellquant/tracking/: __init__.py  track_utils.py  tracker.py
cellquant-v3/tests/plugins/: test_oxytrack.py  test_registry.py  test_senescencedb.py
(+85 files in other folders)
