[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellquant"
version = "3.0.0"
description = "High-throughput cell quantification and tracking for microscopy"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["microscopy", "cell-segmentation", "cellpose", "fluorescence", "quantification", "tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2",
    "numpy>=1.24",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "tifffile>=2024.1",
    "scikit-image>=0.22",
    "scipy>=1.12",
    "Pillow>=10.2",
]

[project.optional-dependencies]
gpu = ["cellpose>=3.0", "torch>=2.1"]
tracking = ["trackastra>=0.1"]
napari = ["napari>=0.4.19", "pyqt5>=5.15"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.2",
]
all = ["cellquant[gpu,tracking,napari]"]

[project.urls]
Homepage = "https://github.com/adb3502/CellQuantGUI"
Repository = "https://github.com/adb3502/CellQuantGUI"
Issues = "https://github.com/adb3502/CellQuantGUI/issues"
Changelog = "https://github.com/adb3502/CellQuantGUI/blob/main/CHANGELOG.md"

[project.scripts]
cellquant = "cellquant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cellquant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["cellquant"]
